<resources>
    <string name="app_name" translatable="false">Real Tracker</string>

    <string name="farmer" translatable="false">Farmer</string>
    <string name="customer" translatable="false">Customer</string>
    <string name="change_language" translatable="false">Change Language</string>

    <!--login and sign-->
    <string name="user_name" translatable="false">User Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="sign_in" translatable="false">Sign In</string>


    <!--farmer profile creation-->
    <string name="profilePicSelelct" translatable="false">Select Picture</string>
    <string name="profilePicupload" translatable="false">Upload</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="secound_name" translatable="false">Second Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="contact_number" translatable="false">Contact Number</string>
    <string name="submit_button" translatable="false">Submit</string>
    <string name="createUsername" translatable="false">Create Username</string>
    <string name="createPassword" translatable="false">Create Password</string>


    <!--hint fields of farmer creation-->
    <string name="enter_first_name" translatable="false">Enter First Name</string>
    <string name="enter_second_name" translatable="false">Enter Second Name</string>
    <string name="enter_email_address" translatable="false">Enter Email Address</string>
    <string name="enter_contact_number" translatable="false">Enter Contact Number</string>
    <string name="enter_username" translatable="false">Enter Username</string>
    <string name="enter_password" translatable="false">Enter Password</string>

    <!--product details-->
    <string name="product_name" translatable="false">Product Name</string>
    <string name="temperature" translatable="false">Temperature</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="fertilizer" translatable="false">Fertilizer</string>
    <string name="farm_name" translatable="false">Farm Name</string>
    <string name="transport_media" translatable="false">Transport Media</string>
    <string name="weeding_type" translatable="false">Weeding Type</string>

    <!--hint fields for product details-->
    <string name="enter_product_name" translatable="false">Enter Product Name</string>
    <string name="stored_temperature" translatable="false">Stored Temperature</string>
    <string name="enter_humidity" translatable="false">Enter Humidity</string>
    <string name="enter_fertilizer" translatable="false">Used Fertilizer</string>
    <string name="enter_farm_name" translatable="false">Enter Farm Name</string>
    <string name="enter_transport_media" translatable="false">Enter Transport Media</string>
    <string name="enter_weeding_type" translatable="false">Enter Weeding Type</string>


    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
</resources>
