<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <!--first name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstNameLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/firstNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_name" />
        </LinearLayout>

        <!--secound name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secoundNameLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/secound_name" />

            <EditText
                android:id="@+id/secoundNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_second_name" />
        </LinearLayout>

        <!--email-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <!--contact numbers-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contactNumberLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_number" />

            <EditText
                android:id="@+id/contactNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contact_number"
                android:inputType="number" />
        </LinearLayout>

        <!--create username-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createUsernameLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/createUsername" />

            <EditText
                android:id="@+id/createUsernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createPasswordLable"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/createPassword" />

            <EditText
                android:id="@+id/createPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="numberPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveFarmarProfileCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>